k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix-rain-service
  namespace: default
  labels:
    app.kubernetes.io/name: matrix-rain-effect
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: matrix-rain-effect
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
